--- a/cucumber/test-output/old/Default suite/methods-alphabetical.html
+++ b/cucumber/test-output/old/Default suite/methods-alphabetical.html
@@ -1,14 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6e7bab">  <td>22/06/03 12:50:15</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:runner.TestNGRunner@750e2b97]">runScenario</td> 
-  <td>main@1816725203</td>   <td></td> </tr>
-<tr bgcolor="6e7bab">  <td>22/06/03 12:50:15</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:runner.TestNGRunner@750e2b97]">runScenario</td> 
-  <td>main@1816725203</td>   <td></td> </tr>
-<tr bgcolor="6e7bab">  <td>22/06/03 12:50:15</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:runner.TestNGRunner@750e2b97]">runScenario</td> 
-  <td>main@1816725203</td>   <td></td> </tr>
-<tr bgcolor="6e7bab">  <td>22/06/03 12:50:15</td>   <td>-363</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass(org.testng.ITestContext)[pri:0, instance:runner.TestNGRunner@750e2b97]">&gt;&gt;setUpClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1816725203</td>   <td></td> </tr>
-<tr bgcolor="6e7bab">  <td>22/06/03 12:50:15</td>   <td>13</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:runner.TestNGRunner@750e2b97]">&lt;&lt;tearDownClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1816725203</td>   <td></td> </tr>
+<tr bgcolor="66a7c2">  <td>22/06/07 23:08:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass(org.testng.ITestContext)[pri:0, instance:runner.TestNGRunner@298a5e20]">&gt;&gt;setUpClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1802066694</td>   <td></td> </tr>
+<tr bgcolor="66a7c2">  <td>22/06/07 23:08:02</td>   <td>81</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:runner.TestNGRunner@298a5e20]">&lt;&lt;tearDownClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1802066694</td>   <td></td> </tr>
 </table>
